manifests/k8s/freshrss-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: freshrss
  name: freshrss
spec:
  finalizers:
  - kubernetes
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: freshrss
  name: freshrss
  namespace: freshrss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: freshrss
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: freshrss
      creationTimestamp: null
    spec:
      containers:
        - env:
            - name: CRON_MIN
              value: 3,33
            - name: TZ
              value: Asia/Taipei
          image: freshrss/freshrss:latest
          name: freshrss
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 64Mi
          volumeMounts:
            - mountPath: /var/www/FreshRSS/data
              name: data
            - mountPath: /var/www/FreshRSS/extensions
              name: extensions
      hostname: freshrss
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: extensions
          persistentVolumeClaim:
            claimName: extensions
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: freshrss
  name: freshrss-service
  namespace: freshrss
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: freshrss
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshrss-ingress
  namespace: freshrss
spec:
  ingressClassName: nginx
  rules:
  - host: freshrss.apps.<base_domain>
      paths:
      - backend:
          service:
            name: freshrss-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - freshrss.apps.<base_domain>
